sam-internal/k8s-out/prd/prd-sam/casam-sidecar-phase2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  name: casam-na7-sidecar
  namespace: core-on-sam-sp2
spec:
  egress:
  - bind: 0.0.0.0
    hosts:
    - '*/na7-mist61-caas-prd.service-mesh.svc.cluster.local'
    port:
      name: redis-caas
      number: 15008
      protocol: Redis
  - hosts:
    - '*/*'
    port:
      name: grpc-tls
      number: 7443
      protocol: GRPC
  - hosts:
    - '*/*'
    port:
      name: http-tls
      number: 7442
      protocol: HTTP
  - hosts:
    - '*/*'
    port:
      name: http-plain
      number: 7014
      protocol: HTTP
  - hosts:
    - '*/*'
    port:
      name: grpc-plain
      number: 7012
      protocol: GRPC
